Selenium Scenarios - Hand Compare PDF Images Updated